tests/compiler/test_files/modifying_parameters_in_fnc.swift
// error

func test(_ x: Int) {
    x = 4 + x
}